lab/openshift/apps/camel-gateway/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camel-gateway
  namespace: guidewire-apps
  labels:
    app: camel-gateway
    app.kubernetes.io/part-of: guidewire-poc
spec:
  host: camel-gateway-guidewire-apps.apps-crc.testing
  to:
    kind: Service
    name: camel-gateway
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
